src/components/zen-dropdown/zen-dropdown.scss
@import '../../zen-styles/variables.scss';
@import '../../zen-styles/shadows.scss';
@import '../../zen-styles/mixins/forms.scss';

$open-transition: 0.2s;

:host {
  position: relative;
  display: inline-flex;
  justify-content: stretch;
  height: auto;
  width: 100%;
  text-align-last: left;
  outline: none;
  font-size: $text-md;
}

:host(:focus) .field {
  &:not(.borderless) {
    @include zenInputFocus;
  }

  &.borderless {
    font-weight: bold;
  }
}

.hidden {
  display: none;
}

.field {
  @include zenInput;
  @include zenInputBase;
  @include noselect;
  z-index: 1;
  position: relative;
  border-radius: $input-radius;
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
  box-sizing: border-box;
  flex-basis: 100%;

  &:not(.borderless) {
    @include zenInputBorder;
  }

  &.borderless {
    background-color: transparent;
  }

  .arrow {
    margin-left: auto;
    margin-right: 0.75rem;
    color: $color-gray-500;
    border-bottom-width: 0;
    transition: transform $open-transition;
  }

  &.opened .arrow {
    transform: rotate(180deg);
  }
}

.placeholder {
  padding: 0.5rem;
  opacity: 0.5;
}

:host([size='sm']) {
  .field {
    height: 1.5rem;
  }

  .arrow {
    margin-right: 0.5rem;
  }
}

:host([size='lg']) {
  .field {
    height: 2.5rem;
  }

  .arrow {
    margin-right: 1rem;
  }
}

:host([size='md']) .field {
  height: 2rem;
}

:host([size='custom']) .field {
  height: auto;
}

$item-line-height: 1.2rem;
$item-ypadding: 0.5rem;

.list {
  max-height: #{4 * ($item-line-height + 2 * $item-ypadding)};
}

:host([invalid='true']) .field {
  box-shadow: $shadow-invalid;
  transition: box-shadow $transition-color;
  border: 1px solid $color-red-700;
}

